[B] Fix tabs so height is variable
If a tab isn't active it has no height so that non visible tabs never push their container's height, whcih results in unwanted whitespace below the tabs

--- a/themes/manifold-marketing/assets/stylesheets/components/tabs/_tabs.scss
+++ b/themes/manifold-marketing/assets/stylesheets/components/tabs/_tabs.scss
@@ -4,12 +4,19 @@
 
   .tabs-inner {
     flex-wrap: nowrap;
+    align-items: flex-start;
     transition: transform $timing $durationSlow;
   }
 
   .tab {
     width: 100vw;
     min-width: 100vw;
+    max-height: none;
+    transition: max-height $timing $duration;
+
+    &.inactive {
+      max-height: 0;
+    }
 
     .inner-container {
       max-width: $containerWidth;
